fixed extra padding on title when required

--- a/client/src/components/input/TextInput/TextInput.scss
+++ b/client/src/components/input/TextInput/TextInput.scss
@@ -69,7 +69,7 @@
 .text-input-required-star {
   color: var(--red-error);
   display: inline-block;
-  font-size: 25px;
+  font-size: 20px;
   margin-bottom: -10px;
   font-weight: 600;
   padding-right: 5px;
